* AIX: Fix the time display which was off by GMT difference. Thanks to   Helen Chen for report.
git-svn-id: http://monit.googlecode.com/svn/trunk@334 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,9 @@ Version 5.2.5
 * bug #32583: Multiple SIP OPTIONS messages use the same header data.
   Thanks to Hugh Waite for patch.
 
+* AIX: Fix the time display which was off by GMT difference. Thanks to
+  Helen Chen for report.
+
 
 
 Version 5.2.4
