AIX: Fix the M/Monit heartbeat. Thanks to Helen Chen for report.
On AIX the pthread.h has to be included as first file or -D_THREAD_SAFE must be used, otherwise the socket interface
becomes crazy when used from non-main thread. Since we use standalone thread for heartbeat (status messages)
to make the heartbeat keep up with deadline and make it non-blocking, the status messages didn't worked - the socket interface
returned usually bunch of random irational errors and only sporadically succeeded. The -D_THREAD_SAFE solves the problem.



git-svn-id: http://monit.googlecode.com/svn/trunk@336 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -18,6 +18,8 @@ Version 5.2.5
 * AIX: Fix the time display which was off by GMT difference. Thanks to
   Helen Chen for report.
 
+* AIX: Fix the M/Monit heartbeat. Thanks to Helen Chen for report.
+
 
 
 Version 5.2.4
