--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,11 +14,14 @@ Version 5.2.5
   restart and reported start failure (similar on stop). Thanks to
   Kenichi Futatsumori for report and helping to root cause the problem.
 
-* Fix bug #32583: Multiple SIP OPTIONS messages use the same header data.
-  Thanks to Hugh Waite for patch.
+* Fix Debian #617259: symbolic links in the filesystem check doesn't work.
+  Thanks to Sergey B Kirpichev for report.
 
 * Fix Debian bug #614984: smtp protocol test issues both EHLO and HELO.
   Thanks to Sergey B Kirpichev for report.
+
+* Fix bug #32583: Multiple SIP OPTIONS messages use the same header data.
+  Thanks to Hugh Waite for patch.
 
 * AIX: Fix the time display which was off by GMT difference. Thanks to
   Helen Chen for report.
