* Try harder to get FQDN hostname for the host where monit is running.   The hostname in the $HOST variable which is used in the mail sender   may thus change. Thanks to Sergey B Kirpichev for patch.
git-svn-id: http://monit.googlecode.com/svn/trunk@342 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -23,12 +23,17 @@ Version 5.2.5
 * Fix bug #32583: Multiple SIP OPTIONS messages use the same header data.
   Thanks to Hugh Waite for patch.
 
+* Try harder to get FQDN hostname for the host where monit is running.
+  The hostname in the $HOST variable which is used in the mail sender
+  may thus change. Thanks to Sergey B Kirpichev for patch.
+
 * AIX: Fix the time display which was off by GMT difference. Thanks to
   Helen Chen for report.
 
 * AIX: Fix the M/Monit heartbeat. Thanks to Helen Chen for report.
 
 * Support symbolic link to monit configuration file.
+
 
 
 
