* Fix crash when monit daemon start delay option was used and monit   was signalized to stop before the start delay passed. Thanks to   John Schult for report.
git-svn-id: http://monit.googlecode.com/svn/trunk@351 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,31 +9,35 @@
 
 Version 5.2.5
 
-* Fix process match check - when the monitored process failed and was
-  restarted by Monit, Monit didn't recognized it is running after the
-  restart and reported start failure (similar on stop). Thanks to
-  Kenichi Futatsumori for report and helping to root cause the problem.
+* Fix process match check - when the monitored process failed and
+  was restarted by Monit, Monit didn't recognized  it is  running
+  after the restart and reported  start failure (similar on stop).
+  Thanks to  Kenichi Futatsumori for report and  helping to root
+  cause the problem.
 
-* Fix Debian #617259: symbolic links in the filesystem check doesn't work.
-  Thanks to Sergey B Kirpichev for report.
+* Fix Debian #617259: symbolic links in the filesystem check doesn't
+  work.  Thanks to Sergey B Kirpichev for report.
 
-* Fix Debian bug #614984: smtp protocol test issues both EHLO and HELO.
-  Thanks to Sergey B Kirpichev for report.
+* Fix Debian bug #614984: smtp protocol test issues both EHLO and
+  HELO.  Thanks to Sergey B Kirpichev for report.
 
-* Fix bug #32583: Multiple SIP OPTIONS messages use the same header data.
-  Thanks to Hugh Waite for patch.
+* Fix bug #32583: Multiple SIP OPTIONS messages use the same header
+  data.  Thanks to Hugh Waite for patch.
 
 * Try harder to get FQDN hostname for the host where monit is running.
   The hostname in the $HOST variable which is used in the mail sender
   may thus change. Thanks to Sergey B Kirpichev for patch.
 
-* AIX: Fix the time display which was off by GMT difference. Thanks to
-  Helen Chen for report.
+* AIX: Fix the time display which was off by GMT difference. Thanks
+  to Helen Chen for report.
 
 * AIX: Fix the M/Monit heartbeat. Thanks to Helen Chen for report.
 
 * Support symbolic link to monit configuration file.
 
+* Fix crash when monit daemon start delay option was used and monit
+  was signalized to stop before the start delay passed. Thanks to
+  John Schult for report.
 
 
 
